seperate user and authentication
