# docs/swagger.yaml
@@ -5,6 +5,23 @@ definitions:
       accessToken:
         type: string
     type: object
+  models.CreateUserRequest:
+    properties:
+      email:
+        type: string
+      fullName:
+        type: string
+      password:
+        minLength: 6
+        type: string
+      username:
+        type: string
+    required:
+    - email
+    - fullName
+    - password
+    - username
+    type: object
   models.Error:
     properties:
       error:
@@ -68,23 +85,6 @@ definitions:
     required:
     - password
     type: object
-  models.SignUpRequest:
-    properties:
-      email:
-        type: string
-      fullName:
-        type: string
-      password:
-        minLength: 6
-        type: string
-      username:
-        type: string
-    required:
-    - email
-    - fullName
-    - password
-    - username
-    type: object
   models.UserDetail:
     properties:
       email:
@@ -112,6 +112,131 @@ info:
   title: Online Learning API
   version: "1.0"
 paths:
+  /auth/forgot-password:
+    post:
+      consumes:
+      - application/json
+      description: Send a password reset link to the user's email
+      parameters:
+      - description: User email
+        in: body
+        name: email
+        required: true
+        schema:
+          $ref: '#/definitions/models.ForgotPasswordRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Message'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Error'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/models.Error'
+      summary: Request password reset
+      tags:
+      - Authentication
+  /auth/login:
+    post:
+      consumes:
+      - application/json
+      description: Log in using email or username and password
+      parameters:
+      - description: Login credentials
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/models.LoginRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.LoginResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Error'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/models.Error'
+      summary: Log in
+      tags:
+      - Authentication
+  /auth/logout:
+    post:
+      description: Log out by clearing the refresh token
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Message'
+      summary: Log out
+      tags:
+      - Authentication
+  /auth/refresh-token:
+    post:
+      description: Refresh the access token using the refresh token
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.AccessTokenResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/models.Error'
+      summary: Refresh access token
+      tags:
+      - Authentication
+  /auth/reset-password:
+    post:
+      consumes:
+      - application/json
+      description: Reset the user's password using a valid token
+      parameters:
+      - description: Reset token
+        in: query
+        name: token
+        required: true
+        type: string
+      - description: New password
+        in: body
+        name: password
+        required: true
+        schema:
+          $ref: '#/definitions/models.ResetPasswordRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Message'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Error'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/models.Error'
+      summary: Reset user password
+      tags:
+      - Authentication
   /users/:
     get:
       description: Retrieve a list of all users
@@ -132,7 +257,36 @@ paths:
       - BearerAuth: []
       summary: Get all users
       tags:
-      - users
+      - User
+    post:
+      consumes:
+      - application/json
+      description: Register a new user with email, username, and password
+      parameters:
+      - description: User data
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/models.CreateUserRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Message'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Error'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/models.Error'
+      summary: Register a new user
+      tags:
+      - User
   /users/{user_id}:
     delete:
       description: Delete a user by user ID
@@ -159,7 +313,7 @@ paths:
       - BearerAuth: []
       summary: Delete user
       tags:
-      - users
+      - User
     get:
       description: Retrieve user information by user ID
       parameters:
@@ -187,7 +341,7 @@ paths:
       - BearerAuth: []
       summary: Get user by ID
       tags:
-      - users
+      - User
     put:
       consumes:
       - application/json
@@ -223,7 +377,7 @@ paths:
       - BearerAuth: []
       summary: Update user information
       tags:
-      - users
+      - User
   /users/{user_id}/password:
     put:
       consumes:
@@ -264,162 +418,7 @@ paths:
       - BearerAuth: []
       summary: Change user password
       tags:
-      - users
-  /users/forgot-password:
-    post:
-      consumes:
-      - application/json
-      description: Send a password reset link to the user's email
-      parameters:
-      - description: User email
-        in: body
-        name: email
-        required: true
-        schema:
-          $ref: '#/definitions/models.ForgotPasswordRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.Message'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/models.Error'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/models.Error'
-      summary: Request password reset
-      tags:
-      - users
-  /users/login:
-    post:
-      consumes:
-      - application/json
-      description: Log in a user using email or username and password
-      parameters:
-      - description: Login credentials
-        in: body
-        name: user
-        required: true
-        schema:
-          $ref: '#/definitions/models.LoginRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.LoginResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/models.Error'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/models.Error'
-      summary: Log in an existing user
-      tags:
-      - users
-  /users/logout:
-    post:
-      description: Log out the user by clearing the refresh token
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.Message'
-      summary: Log out the user
-      tags:
-      - users
-  /users/refresh:
-    post:
-      description: Refresh the access token using the refresh token
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.AccessTokenResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/models.Error'
-      summary: Refresh access token
-      tags:
-      - users
-  /users/reset-password:
-    post:
-      consumes:
-      - application/json
-      description: Reset the user's password using a valid token
-      parameters:
-      - description: Reset token
-        in: query
-        name: token
-        required: true
-        type: string
-      - description: New password
-        in: body
-        name: password
-        required: true
-        schema:
-          $ref: '#/definitions/models.ResetPasswordRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.Message'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/models.Error'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/models.Error'
-      summary: Reset user password
-      tags:
-      - users
-  /users/signup:
-    post:
-      consumes:
-      - application/json
-      description: Register a new user with email, username, and password
-      parameters:
-      - description: User data
-        in: body
-        name: user
-        required: true
-        schema:
-          $ref: '#/definitions/models.SignUpRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.Message'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/models.Error'
-        "409":
-          description: Conflict
-          schema:
-            $ref: '#/definitions/models.Error'
-      summary: Register a new user
-      tags:
-      - users
+      - User
 securityDefinitions:
   BearerAuth:
     in: header
